--- a/client/src/components/loginform/LoginForm.module.css
+++ b/client/src/components/loginform/LoginForm.module.css
@@ -1,10 +1,12 @@
 .loginSection {
   display: flex;
   flex-direction: column;
-  margin: 20px auto;
+  margin: 50px auto;
   align-items: center;
   justify-content: center;
   background: transparent;
+  z-index: 1001;
+  position: relative;
 }
 .logo {
   background-image: url("../../assets/mobilelogo.png");
@@ -15,6 +17,7 @@
   margin-bottom: 43px;
 }
 .formContainer {
+  background-color: white;
   display: flex;
   padding: 32px 25px 20px 25px;
   width: 230px;
