--- a/client/src/components/registerform/RegisterForm.module.css
+++ b/client/src/components/registerform/RegisterForm.module.css
@@ -15,6 +15,7 @@
   margin-bottom: 43px;
 }
 .formContainer {
+  background-color: white;
   display: flex;
   padding: 32px 25px 20px 25px;
   width: 230px;
