--- a/client/src/components/registerform/RegisterForm.module.css
+++ b/client/src/components/registerform/RegisterForm.module.css
@@ -128,6 +128,14 @@
   background-color: rgba(255, 116, 29, 0.738);
   color: white;
 }
+.form button a {
+  text-decoration: none;
+  color: black;
+  width: 100%;
+}
+.form button:hover a {
+  color: white;
+}
 
 .bttnsDiv {
   display: flex;
