--- a/client/src/components/loginform/LoginForm.module.css
+++ b/client/src/components/loginform/LoginForm.module.css
@@ -129,8 +129,14 @@
   color: white;
 }
 .form button a {
+  display: flex;
   text-decoration: none;
   color: black;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 .form button:hover a {
   color: white;
