--- a/client/src/components/Balance/Balance.module.css
+++ b/client/src/components/Balance/Balance.module.css
@@ -3,14 +3,19 @@ a {
     text-decoration: none;
 }
 
+.iconArrow {
+    background-image: url("../../assets/arrow.svg");
+    width: 18px;
+    height: 18px;
+    margin-right: 4px;
+     }
 
 .balanceSection {
     margin: 0;
     background-color: #FFFFFF;
     font-family: "Roboto", sans-serif;
     min-width: 320px;
-    min-height: 567px;
-}
+    }
 
 .dataContainer {
     display: flex;
