--- a/client/src/components/loginform/LoginForm.module.css
+++ b/client/src/components/loginform/LoginForm.module.css
@@ -17,6 +17,7 @@
   margin-bottom: 43px;
 }
 .formContainer {
+  box-sizing: content-box;
   background-color: white;
   display: flex;
   padding: 32px 25px 20px 25px;
